--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,21 @@
- node_modules/
+ 
+node_modules/
  
 dist/
  
 .env
  
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+ 
+
  
 *.tsbuildinfo
  
-.npm
+.npm/
+
  
 coverage/
+
  
 .DS_Store
 Thumbs.db
