--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "crud-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "cross-env NODE_ENV=development ts-node-dev src/server.ts",
-    "start:prod": "cross-env NODE_ENV=production node dist/server.js",
+    "test": "jest",
     "build": "tsc",
+    "start:dev": "cross-env NODE_ENV=development tsx src/server.ts",
+    "start:prod": "cross-env NODE_ENV=production node dist/index.js",
     "lint": "eslint \"src/**/*.ts\""
   },
   "keywords": [],
@@ -16,7 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/eslintrc": "^3.1.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.6",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.10.0",
@@ -25,9 +27,14 @@
     "eslint": "^9.13.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "uuid": "^10.0.0"
   }
