--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ESNext",
+    "target": "ESNext", 
+    "module": "ESNext", 
     "moduleResolution": "node",
+    "types": ["jest", "node"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "noEmit": true,
     "baseUrl": "./",
-    "paths": {
-      "@/assets/*": ["src/assets/*"]
-    }
+    "outDir": "./dist",  
+    "rootDir": "./src",
+    "noEmit": false
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
 }
+
+ 
