--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "tsc",
     "start:dev": "cross-env NODE_ENV=development tsx src/server.ts",
     "start:prod": "cross-env NODE_ENV=production node dist/index.js",
-    "start:multi":"cross-env NODE_ENV=multi tsx src/cluster.ts",
+    "start:multi": "cross-env NODE_ENV=production MULTI_MODE=true tsx src/cluster.ts",
     "lint": "eslint \"src/**/*.ts\""
   },
   "keywords": [],
